# aether

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  skills-lock.json
.claude/: settings.local.json
docs/: PLAN.md  cmd_style.md
migrations/: 20260305000000_init.sql
plans/: mcp-fix-plan.md  mcp.md
src/: ai_service.rs  bot.rs  config.rs  conversation.rs  event_handler.rs  lib.rs  main.rs  media.rs  traits.rs
src/command/: context.rs  gateway.rs  mod.rs  parser.rs  permission.rs  registry.rs
src/event_handler/: invite.rs  mod.rs  streaming.rs
src/mcp/: mod.rs  server_manager.rs  tool_registry.rs
src/mcp/transport/: http.rs  mod.rs
src/modules/: mod.rs
src/modules/admin/: handlers.rs  mod.rs
src/modules/mcp/: handlers.rs
src/modules/meme/: handlers.rs  klipy.rs  mod.rs  tenor.rs
src/modules/muyu/: handlers.rs  logic.rs  mod.rs  models.rs  store.rs
src/modules/persona/: handlers.rs  mod.rs
src/store/: database.rs  mod.rs  persona_store.rs
src/ui/: mod.rs  templates.rs
tests/: ai_service_integration.rs  bot_integration.rs  event_handler_integration.rs  mcp_integration.rs  vision_integration.rs
tests/common/: mock_client.rs  mock_room.rs  mod.rs  test_helpers.rs
