[package]
name = "aether-matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = "0.16.0"
async-openai = { version = "0.33", features = ["chat-completion"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
futures-util = "0.3"
base64 = "0.22"
image = "0.25"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
mockall = "0.13"
tempfile = "3"
lazy_static = "1"
